Add: endpoint for liking a blog
